<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.brc</groupId>
  <artifactId>white-mercury-dg</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>white-mercury-dg</name>
  <description>The White Mercury Data Generation Tool</description>

  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
  	<plugins>
	   <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-enforcer-plugin</artifactId>
	      <version>1.2</version>
	      <executions>
	        <execution>
	          <id>enforce-versions</id>
	          <goals>
	            <goal>enforce</goal>
	          </goals>
	          <configuration>
	            <rules>
	              <requireJavaVersion>
	                <version>1.7</version>
	              </requireJavaVersion>
	            </rules>
	          </configuration>
	        </execution>
	      </executions>
	    </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.0</version>
           <configuration>
               <source>1.7</source>
               <target>1.7</target>
           </configuration>
        </plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <!-- <configuration>
				<forkCount>3</forkCount>
				<reuseForks>true</reuseForks>
				<argLine>-XX:-UseSplitVerifier -Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m</argLine>
		    </configuration> -->
		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-jar-plugin</artifactId>
  			<version>2.4</version>
  		</plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.0</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
						<artifactSet>
						  <excludes>
						    <exclude>org.testng:testng</exclude>
						  </excludes>
						</artifactSet>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>com.brc.white-mercury-dg.WhiteMercuryDGMain</mainClass>
                            </transformer>
                        </transformers>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                    <exclude>conf/log4j*.properties</exclude>
                                    <exclude>log4j*.properties</exclude>
                                </excludes>
                            </filter>
                        </filters>
                        <shadedArtifactAttached>true</shadedArtifactAttached>
                        <shadedClassifierName>shaded</shadedClassifierName>
                    </configuration>
                </execution>
            </executions>
        </plugin>
	</plugins>
	<pluginManagement>
	  <plugins>
	    <plugin>
	      <groupId>org.eclipse.m2e</groupId>
	      <artifactId>lifecycle-mapping</artifactId>
	      <version>1.0.0</version>
	      <configuration>
	        <lifecycleMappingMetadata>
	          <pluginExecutions>
	            <pluginExecution>
	              <pluginExecutionFilter>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-enforcer-plugin</artifactId>
	                <versionRange>[1.0.0,)</versionRange>
	                <goals>
	                  <goal>enforce</goal>
	                </goals>
	              </pluginExecutionFilter>
	              <action>
	                <ignore />
	              </action>
	            </pluginExecution>
	          </pluginExecutions>
	        </lifecycleMappingMetadata>
	      </configuration>
	    </plugin>
	  </plugins>
	</pluginManagement>
  </build>

  <dependencies>
  	<dependency>
  		<groupId>org.freemarker</groupId>
  		<artifactId>freemarker</artifactId>
  		<version>2.3.19</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-core</artifactId>
  		<version>2.17.2</version>
  	</dependency>
  	<dependency>
  		<groupId>jgraph</groupId>
  		<artifactId>jgraph</artifactId>
  		<version>5.13.0.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.databene</groupId>
  		<artifactId>databene-benerator</artifactId>
  		<version>0.5.9-SR1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.databene</groupId>
  		<artifactId>databene-commons</artifactId>
  		<version>0.4.9-SR1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.databene</groupId>
  		<artifactId>databene-webdecs</artifactId>
  		<version>0.4.9-SR1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.swinglabs</groupId>
  		<artifactId>swing-layout</artifactId>
  		<version>1.0.3</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-logging</groupId>
  		<artifactId>commons-logging</artifactId>
  		<version>1.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>5.1.26</version>
  	</dependency>
  	<dependency>
  		<groupId>org.perf4j</groupId>
  		<artifactId>perf4j</artifactId>
  		<version>0.9.16</version>
  	</dependency>
	<dependency>
	    <groupId>org.testng</groupId>
	    <artifactId>testng</artifactId>
	    <version>6.8.1</version>
	</dependency>
 </dependencies>

 	<profiles>
		<profile>
			<id>findbugs-scan</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
					  <groupId>org.codehaus.mojo</groupId>
					  <artifactId>findbugs-maven-plugin</artifactId>
					  <version>2.5.2</version>
					  <configuration>
			          	<excludeFilterFile>src/test/resources/findbugs-exclude.xml</excludeFilterFile>
					  	<findbugsXmlOutput>true</findbugsXmlOutput>
						<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
						<xmlOutput>true</xmlOutput>
					  </configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>cobertura-scan</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
				    <plugin>
				        <groupId>org.codehaus.mojo</groupId>
				        <artifactId>cobertura-maven-plugin</artifactId>
				        <version>2.5.2</version>
			            <configuration>
							<instrumentation>
							  <ignores>
							    <ignore>generator.gui*</ignore>
							    <ignore>generator.panels*</ignore>
							  </ignores>
								<excludes>
								  <exclude>generator/gui/**/*.class</exclude>
								  <exclude>generator/panels/**/*.class</exclude>
								</excludes>
							</instrumentation>
			                <formats>
			                    <format>html</format>
			                    <format>xml</format>
			                </formats>
			            </configuration>
				    </plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
